user profile wip

--- a/fullpage-rwd-template/index.html
+++ b/fullpage-rwd-template/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>fullPage.js One Page Scroll Sites</title>
-    <meta name="author" content="Alvaro Trigo Lopez" />
-    <meta name="description" content="fullPage plugin by Alvaro Trigo. Create fullscreen pages fast and simple. One page scroll like iPhone website." />
+    <meta name="author" content="Dariusz Wrzesien" />
+    <meta name="description" content="fullPage plugin by Alvaro Trigo." />
     <meta name="keywords"  content="fullpage,jquery,alvaro,trigo,plugin,fullscren,screen,full,iphone5,apple" />
     <meta name="Resource-type" content="Document" />
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
