--- a/user-profile-template/index.html
+++ b/user-profile-template/index.html
@@ -16,15 +16,34 @@
 <body>
 <section class="user-profile">
     <div class="photo-container">
-        <div id="user-photo-container" class="photo">
-            <img src="" >
+        <div class="photo">
+            <div id="edit-user-photo-container">
+                <img src="" >
+            </div>
         </div>
         <div class="photo-input">
             <input id="user-profile-photo-input" type="file" id="input-photo">
         </div>
-        <button id="log">edit</button>
     </div>
 </section>
+<!-- Modal -->
+<!--<div class="modal fade" id="edit-photo-modal" tabindex="-1" role="dialog" aria-labelledby="editPhotoModalLabel">-->
+    <!--<div class="modal-dialog" role="document">-->
+        <!--<div class="modal-content">-->
+            <!--<div class="modal-header">-->
+                <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
+                <!--<h4 class="modal-title" id="editPhotoModalLabel">Modal title</h4>-->
+            <!--</div>-->
+            <!--<div class="modal-body">-->
+                <!--&lt;!&ndash;<div style="width: 100px; height: 100px;" id="edit-user-photo-container" class="edit-photo"></div>&ndash;&gt;-->
+            <!--</div>-->
+            <!--<div class="modal-footer">-->
+                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+                <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="bower_components/blueimp-load-image/js/load-image.all.min.js"></script>
