crop in modat wip

--- a/user-profile-template/index.html
+++ b/user-profile-template/index.html
@@ -24,9 +24,10 @@
         <div class="photo-input">
             <input id="user-profile-photo-input" type="file" id="input-photo">
         </div>
+        <button id="test">test</button>
     </div>
 </section>
-<!-- Modal -->
+<!-- Edit Photo Modal -->
 <!--<div class="modal fade" id="edit-photo-modal" tabindex="-1" role="dialog" aria-labelledby="editPhotoModalLabel">-->
     <!--<div class="modal-dialog" role="document">-->
         <!--<div class="modal-content">-->
@@ -35,7 +36,9 @@
                 <!--<h4 class="modal-title" id="editPhotoModalLabel">Modal title</h4>-->
             <!--</div>-->
             <!--<div class="modal-body">-->
-                <!--&lt;!&ndash;<div style="width: 100px; height: 100px;" id="edit-user-photo-container" class="edit-photo"></div>&ndash;&gt;-->
+                <!--<div id="edit-user-photo-container">-->
+                    <!--<img src="" >-->
+                <!--</div>-->
             <!--</div>-->
             <!--<div class="modal-footer">-->
                 <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
