--- a/user-profile-template/index.html
+++ b/user-profile-template/index.html
@@ -11,44 +11,27 @@
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/blueimp-load-image/css/vendor/jquery.Jcrop.css" />
+    <link rel="stylesheet" type="text/css" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/dwr-style.css" />
 </head>
 <body>
 <section class="user-profile">
-    <div class="photo-container">
-        <div class="photo">
-            <div id="edit-user-photo-container">
-                <img src="" >
-            </div>
-        </div>
-        <div class="photo-input">
-            <input id="user-profile-photo-input" type="file" id="input-photo">
-        </div>
-        <button id="test">test</button>
+    <div class="photo-input">
+        <input id="user-profile-photo-input" type="file" id="input-photo">
     </div>
 </section>
-<!-- Edit Photo Modal -->
-<!--<div class="modal fade" id="edit-photo-modal" tabindex="-1" role="dialog" aria-labelledby="editPhotoModalLabel">-->
-    <!--<div class="modal-dialog" role="document">-->
-        <!--<div class="modal-content">-->
-            <!--<div class="modal-header">-->
-                <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
-                <!--<h4 class="modal-title" id="editPhotoModalLabel">Modal title</h4>-->
-            <!--</div>-->
-            <!--<div class="modal-body">-->
-                <!--<div id="edit-user-photo-container">-->
-                    <!--<img src="" >-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="modal-footer">-->
-                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-                <!--<button type="button" class="btn btn-primary">Save changes</button>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
+<!--Edit Photo Dialog-->
+<div id="edit-photo-dialog" >
+    <div class="dialog-body">
+        <div id="edit-user-photo-container">
+            <img src="" >
+        </div>
+    </div>
+</div>
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 <script type="text/javascript" src="bower_components/blueimp-load-image/js/load-image.all.min.js"></script>
 <script type="text/javascript" src="bower_components/blueimp-load-image/js/vendor/jquery.Jcrop.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
