--- a/user-profile-template/index.html
+++ b/user-profile-template/index.html
@@ -17,20 +17,32 @@
 <body>
 <section class="user-profile">
     <div class="photo-input">
-        <input id="user-profile-photo-input" type="file" id="input-photo">
+        <input id="userProfilePhotoInput" type="file">
     </div>
 </section>
-<!--Edit Photo Dialog-->
-<div id="edit-photo-dialog" >
-    <div class="dialog-body">
-        <div id="edit-user-photo-container">
-            <img src="" >
+
+<!--Edit Photo Modal-->
+<div class="modal fade" id="editUserPhotoModal" tabindex="-1" role="dialog" aria-labelledby="editUserPhotoModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="editUserPhotoModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <div id="editUserPhotoContainer" class="photo-container">
+                    <img src="" >
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
         </div>
     </div>
 </div>
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 <script type="text/javascript" src="bower_components/blueimp-load-image/js/load-image.all.min.js"></script>
 <script type="text/javascript" src="bower_components/blueimp-load-image/js/vendor/jquery.Jcrop.js"></script>
