--- a/user-profile-template/index.html
+++ b/user-profile-template/index.html
@@ -18,8 +18,8 @@
 <section class="user-profile">
     <form method="post">
         <div class="photo-preview">
-            <!--<img src="img/user_default.jpg" >-->
-            <canvas id="photoPreview" width="240" height="297" style="border:1px solid #d3d3d3;">
+            <img id="photoDefault" src="img/user_default.jpg" >
+            <canvas id="photoPreview" width="150" height="150" style="border:1px solid #d3d3d3; display: none">
                 Your browser does not support the HTML5 canvas tag.
             </canvas>
         </div>
