--- a/user-profile-template/index.html
+++ b/user-profile-template/index.html
@@ -10,30 +10,57 @@
     <meta name="Resource-type" content="Document" />
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/blueimp-load-image/css/vendor/jquery.Jcrop.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/dwr-style.css" />
 </head>
 <body>
 <section class="user-profile">
+    <h1>Edit user profile</h1>
     <form method="post">
-        <div class="photo-preview">
-            <img id="photoDefault" src="img/user_default.jpg" >
-            <canvas id="photoPreview" width="150" height="150" style="border:1px solid #d3d3d3; display: none">
-                Your browser does not support the HTML5 canvas tag.
-            </canvas>
-        </div>
-        <div class="photo-input">
-            <input id="userProfilePhotoInput" type="file">
-        </div>
+        <div class="left-panel">
+            <div class="photo-preview">
+                <img id="photoDefault" src="img/user_default.jpg" >
+                <canvas id="photoPreview" width="150" height="150" style="border:1px solid #d3d3d3; display: none">
+                    Your browser does not support the HTML5 canvas tag.
+                </canvas>
+                <button id="editUserProfilePhotoBtn" type="button" class="edit-user-profile-photo btn btn-default">
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                </button>
+            </div>
+            <div class="photo-input">
+                <input id="userProfilePhotoInput" type="file">
+            </div>
+            <div class="user-profile-submit">
+                <input type="hidden" id="x" name="x" >
+                <input type="hidden" id="y" name="y" >
+                <input type="hidden" id="w" name="w" >
+                <input type="hidden" id="h" name="h" >
 
-        <div class="user-profile-submit">
-            <input type="hidden" id="x" name="x" >
-            <input type="hidden" id="y" name="y" >
-            <input type="hidden" id="w" name="w" >
-            <input type="hidden" id="h" name="h" >
-
-            <input class="btn btn-success" type="submit" value="Save">
+                <input class="btn btn-success" type="submit" value="Save">
+            </div>
+        </div>
+        <div class="right-panel">
+            <div class="form-group">
+                <label for="InputAddress">Address</label>
+                <input type="text" class="form-control" id="InputAddress" placeholder="Address">
+            </div>
+            <div class="form-group">
+                <label for="InputPostcode">Postcode</label>
+                <input type="text" class="form-control" id="InputPostCode" placeholder="Postcode">
+            </div>
+            <div class="form-group">
+                <label for="InputCity">City</label>
+                <input type="text" class="form-control" id="InputCity" placeholder="City">
+            </div>
+            <div class="form-group">
+                <select class="selectpicker">
+                    <option>Mustard</option>
+                    <option>Ketchup</option>
+                    <option>Relish</option>
+                </select>
+            </div>
         </div>
     </form>
 </section>
@@ -61,6 +88,7 @@
 </div>
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 <script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 <script type="text/javascript" src="bower_components/blueimp-load-image/js/load-image.all.min.js"></script>
 <script type="text/javascript" src="bower_components/blueimp-load-image/js/vendor/jquery.Jcrop.js"></script>
